--- a/KDIC/Base.lproj/Main_iPhone.storyboard
+++ b/KDIC/Base.lproj/Main_iPhone.storyboard
@@ -4,6 +4,51 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
+        <!--Detail View Controller - Title-->
+        <scene sceneID="hXM-s1-mQ0">
+            <objects>
+                <viewController id="z33-8w-N9D" customClass="DetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xwa-nh-Q0B"/>
+                        <viewControllerLayoutGuide type="bottom" id="qhv-jT-5N1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="l2N-EX-B8b">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="q7I-Xb-2rZ">
+                                <rect key="frame" x="0.0" y="64" width="320" height="436"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GSj-JJ-fSX">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Details" id="Zm4-bh-fux">
+                                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="pDR-Kw-9mg">
+                                            <connections>
+                                                <action selector="done" destination="z33-8w-N9D" id="HvY-Vn-rSc"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="rCE-Ax-I9X"/>
+                    <connections>
+                        <outlet property="textView" destination="q7I-Xb-2rZ" id="RWD-40-D08"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aXS-6Z-x4a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1548" y="-32"/>
+        </scene>
         <!--Player View Controller - KDIC Radio-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -106,7 +151,13 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="hMm-ls-5eY"/>
+                    <navigationItem key="navigationItem" id="hMm-ls-5eY">
+                        <barButtonItem key="rightBarButtonItem" title="More" id="fVd-jb-uBN">
+                            <connections>
+                                <segue destination="z33-8w-N9D" kind="modal" identifier="ViewDetails" modalTransitionStyle="coverVertical" id="jXs-W6-ECl"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -423,7 +474,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="VnM-Cj-cQT"/>
         <segue reference="ZOV-Qw-rxu"/>
+        <segue reference="VnM-Cj-cQT"/>
     </inferredMetricsTieBreakers>
 </document>
