--- a/KDIC/Base.lproj/Main_iPhone.storyboard
+++ b/KDIC/Base.lproj/Main_iPhone.storyboard
@@ -243,12 +243,12 @@
             <objects>
                 <tableViewController id="sQo-07-THK" customClass="ShowsPodcastsViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="WPC-3Z-120">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PodcastCell" textLabel="QSq-BS-8Ju" imageView="Xkd-dM-TvG" style="IBUITableViewCellStyleDefault" id="H3r-p4-hg2">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H3r-p4-hg2" id="07R-Cm-vzN">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -417,7 +417,7 @@
         <scene sceneID="la2-Zk-rcG">
             <objects>
                 <navigationController definesPresentationContext="YES" id="ytS-Hz-XWU" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Schedule" id="2Tf-Yi-2Pl"/>
+                    <tabBarItem key="tabBarItem" title="Schedule" image="schedule.png" id="2Tf-Yi-2Pl"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1Ag-ED-fHw">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -443,7 +443,7 @@
                             <outlet property="delegate" destination="end-Ob-wk3" id="oNU-T7-rky"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Schedule" id="vNI-Yf-yLl"/>
+                    <tabBarItem key="tabBarItem" title="Schedule" image="schedule.png" id="vNI-Yf-yLl"/>
                     <navigationItem key="navigationItem" id="cIZ-8p-JMY">
                         <barButtonItem key="rightBarButtonItem" image="nowPlaying.png" id="uQN-po-WcQ">
                             <connections>
@@ -469,6 +469,7 @@
         <image name="microphone2.png" width="30" height="30"/>
         <image name="nowPlaying.png" width="60" height="30"/>
         <image name="play.png" width="256" height="256"/>
+        <image name="schedule.png" width="30" height="30"/>
         <image name="volume_max.png" width="512" height="512"/>
         <image name="volume_min.png" width="512" height="512"/>
     </resources>
@@ -478,7 +479,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="oVu-L5-DhR"/>
-        <segue reference="NOq-nw-ovA"/>
+        <segue reference="VnM-Cj-cQT"/>
+        <segue reference="ZOV-Qw-rxu"/>
     </inferredMetricsTieBreakers>
 </document>
